# U2-Net

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/: CONTRIBUTING.md  auto-assign.yml
.github/workflows/: ci.yml  lint-docs.yml  pylint-pyright.yml
tools/: inference.py  test.py  train.py
u2net/: __init__.py
u2net/models/: u2net.py  u2net_refactor.py
u2net/utils/: dataset.py
